--- a/LuaSDL/LuaSDL.vcxproj
+++ b/LuaSDL/LuaSDL.vcxproj
@@ -34,11 +34,25 @@
     <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
     <Import Project="..\Lua_library.props" />
     <Import Project="..\lua5.1.props" />
+    <Import Project="..\tolua++.props" />
+    <Import Project="..\libSDL.props" />
+    <Import Project="..\SDL_image.props" />
+    <Import Project="..\SDL_mixer.props" />
+    <Import Project="..\SDL_ttf.props" />
+    <Import Project="..\SDL_gfx.props" />
+    <Import Project="..\SDL_net.props" />
   </ImportGroup>
   <ImportGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="PropertySheets">
     <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
     <Import Project="..\Lua_library.props" />
     <Import Project="..\lua5.1.props" />
+    <Import Project="..\tolua++.props" />
+    <Import Project="..\libSDL.props" />
+    <Import Project="..\SDL_image.props" />
+    <Import Project="..\SDL_mixer.props" />
+    <Import Project="..\SDL_ttf.props" />
+    <Import Project="..\SDL_gfx.props" />
+    <Import Project="..\SDL_net.props" />
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup>
@@ -57,7 +71,7 @@
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
       <Optimization>Disabled</Optimization>
-      <AdditionalIncludeDirectories>C:\Users\Soulik\Documents\Visual Studio 2008\Projects\LuaSDL\LuaSDL\binding\orig;C:\Users\Soulik\Documents\Visual Studio 2008\Projects\LuaSDL\LuaSDL;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(ProjectDir);$(ProjectDir)binding\orig;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <PreprocessorDefinitions>LUA_BUILD_AS_DLL;LUA_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <MinimalRebuild>true</MinimalRebuild>
       <BasicRuntimeChecks>EnableFastChecks</BasicRuntimeChecks>
@@ -70,8 +84,8 @@
       <DebugInformationFormat>EditAndContinue</DebugInformationFormat>
     </ClCompile>
     <Link>
-      <AdditionalDependencies>tolua++.lib;lua5.1.lib;SDL.lib;SDL_mixer.lib;SDL_image.lib;SDL_net.lib;SDL_ttf.lib;%(AdditionalDependencies)</AdditionalDependencies>
-      <AdditionalLibraryDirectories>C:\Users\Soulik\Documents\Visual Studio 2008\Projects\SDL\VisualC\SDL\Debug;C:\projects\Visual Studio 2008\luaffmpeg\Debug;C:\Users\Soulik\Documents\Visual Studio 2008\Projects\LuaSDL\LuaSDL;C:\projects\SDL\SDL-1.2.14\lib;C:\projects\SDL\SDL_mixer-1.2.11\lib;C:\projects\SDL\SDL_image-1.2.10\lib;C:\projects\SDL\SDL_net-1.2.7\lib;C:\projects\SDL\SDL_ttf-2.0.10\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <SubSystem>Windows</SubSystem>
       <TargetMachine>MachineX86</TargetMachine>
@@ -81,7 +95,7 @@
     <ClCompile>
       <Optimization>MaxSpeed</Optimization>
       <IntrinsicFunctions>true</IntrinsicFunctions>
-      <AdditionalIncludeDirectories>C:\Users\Soulik\Documents\Visual Studio 2008\Projects\LuaSDL\LuaSDL\binding\orig;C:\Users\Soulik\Documents\Visual Studio 2008\Projects\LuaSDL\LuaSDL;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(ProjectDir);$(ProjectDir)binding\orig;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <PreprocessorDefinitions>_CRT_SECURE_NO_WARNINGS;LUA_BUILD_AS_DLL;LUA_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
       <FunctionLevelLinking>true</FunctionLevelLinking>
@@ -91,8 +105,8 @@
       <DebugInformationFormat>ProgramDatabase</DebugInformationFormat>
     </ClCompile>
     <Link>
-      <AdditionalDependencies>lua5.1.lib;SDL.lib;SDL_mixer.lib;SDL_image.lib;SDL_net.lib;SDL_ttf.lib;SDL_gfx.lib;tolua++.lib;%(AdditionalDependencies)</AdditionalDependencies>
-      <AdditionalLibraryDirectories>C:\Users\Soulik\Documents\Visual Studio 2008\Projects\SDL\VisualC\SDL\Release;C:\projects\Visual Studio 2008\luaffmpeg\Release;C:\projects\SDL\SDL-1.2.14\lib;C:\projects\SDL\SDL_mixer-1.2.11\lib;C:\projects\SDL\SDL_image-1.2.10\lib;C:\projects\SDL\SDL_net-1.2.7\lib;C:\projects\SDL\SDL_ttf-2.0.10\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <SubSystem>Windows</SubSystem>
       <OptimizeReferences>true</OptimizeReferences>
