--- a/dependencies/sdl_image/CMakeLists.txt
+++ b/dependencies/sdl_image/CMakeLists.txt
@@ -4,7 +4,8 @@ project (SDLIMAGE)
 include(CheckLibraryExists)
 include(CheckIncludeFiles)
 include(CheckIncludeFile)
-set(CMAKE_MODULE_PATH "${SDLIMAGE_SOURCE_DIR}/cmake")
+
+list(APPEND CMAKE_MODULE_PATH "${SDLIMAGE_SOURCE_DIR}/cmake")
 
 find_package(SDL REQUIRED)
 
