--- a/dependencies/sdl_mixer/external/smpeg2-2.0.0/CMakeLists.txt
+++ b/dependencies/sdl_mixer/external/smpeg2-2.0.0/CMakeLists.txt
@@ -6,7 +6,7 @@ include(CheckLibraryExists)
 include(CheckIncludeFiles)
 include(CheckIncludeFile)
 
-set(CMAKE_MODULE_PATH "${SMPEG_SOURCE_DIR}/cmake")
+list(APPEND CMAKE_MODULE_PATH "${SMPEG_SOURCE_DIR}/cmake")
 
 find_package(SDL REQUIRED)
 
