--- a/dependencies/sdl_net/CMakeLists.txt
+++ b/dependencies/sdl_net/CMakeLists.txt
@@ -5,7 +5,7 @@ include(CheckLibraryExists)
 include(CheckIncludeFiles)
 include(CheckIncludeFile)
 
-set(CMAKE_MODULE_PATH "${SDLNET_SOURCE_DIR}/cmake")
+list(APPEND CMAKE_MODULE_PATH "${SDLNET_SOURCE_DIR}/cmake")
 
 find_package(SDL REQUIRED)
 
