Fixed Linux port

--- a/dependencies/libSDL/include/SDL_config.h.in
+++ b/dependencies/libSDL/include/SDL_config.h.in
@@ -162,9 +162,9 @@
 
 /* Enable various audio drivers */
 #cmakedefine SDL_AUDIO_DRIVER_ALSA 1
-#cmakedefine SDL_AUDIO_DRIVER_ALSA_DYNAMIC 1
+#cmakedefine SDL_AUDIO_DRIVER_ALSA_DYNAMIC "@SDL_AUDIO_DRIVER_ALSA_DYNAMIC@"
 #cmakedefine SDL_AUDIO_DRIVER_ARTS 1
-#cmakedefine SDL_AUDIO_DRIVER_ARTS_DYNAMIC 1
+#cmakedefine SDL_AUDIO_DRIVER_ARTS_DYNAMIC "@SDL_AUDIO_DRIVER_ARTS_DYNAMIC@"
 #cmakedefine SDL_AUDIO_DRIVER_BAUDIO 1
 #cmakedefine SDL_AUDIO_DRIVER_BSD 1
 #cmakedefine SDL_AUDIO_DRIVER_COREAUDIO 1
@@ -175,15 +175,15 @@
 #cmakedefine SDL_AUDIO_DRIVER_DMEDIA 1
 #cmakedefine SDL_AUDIO_DRIVER_DSOUND 1
 #cmakedefine SDL_AUDIO_DRIVER_PULSE 1
-#cmakedefine SDL_AUDIO_DRIVER_PULSE_DYNAMIC 1
+#cmakedefine SDL_AUDIO_DRIVER_PULSE_DYNAMIC "@SDL_AUDIO_DRIVER_PULSE_DYNAMIC@"
 #cmakedefine SDL_AUDIO_DRIVER_ESD 1
-#cmakedefine SDL_AUDIO_DRIVER_ESD_DYNAMIC 1
+#cmakedefine SDL_AUDIO_DRIVER_ESD_DYNAMIC "@SDL_AUDIO_DRIVER_ESD_DYNAMIC@"
 #cmakedefine SDL_AUDIO_DRIVER_MINT 1
 #cmakedefine SDL_AUDIO_DRIVER_MMEAUDIO 1
 #cmakedefine SDL_AUDIO_DRIVER_NAS 1
-#cmakedefine SDL_AUDIO_DRIVER_NAS_DYNAMIC 1
+#cmakedefine SDL_AUDIO_DRIVER_NAS_DYNAMIC "@SDL_AUDIO_DRIVER_NAS_DYNAMIC@"
 #cmakedefine SDL_AUDIO_DRIVER_OSS 1
-#cmakedefine SDL_AUDIO_DRIVER_OSS_SOUNDCARD_H 1
+#cmakedefine SDL_AUDIO_DRIVER_OSS_SOUNDCARD_H "@SDL_AUDIO_DRIVER_OSS_SOUNDCARD_H@"
 #cmakedefine SDL_AUDIO_DRIVER_PAUD 1
 #cmakedefine SDL_AUDIO_DRIVER_QNXNTO 1
 #cmakedefine SDL_AUDIO_DRIVER_SNDMGR 1
@@ -287,10 +287,10 @@
 #cmakedefine SDL_VIDEO_DRIVER_WSCONS 1
 #cmakedefine SDL_VIDEO_DRIVER_X11 1
 #cmakedefine SDL_VIDEO_DRIVER_X11_DGAMOUSE 1
-#cmakedefine SDL_VIDEO_DRIVER_X11_DYNAMIC 1
-#cmakedefine SDL_VIDEO_DRIVER_X11_DYNAMIC_XEXT 1
-#cmakedefine SDL_VIDEO_DRIVER_X11_DYNAMIC_XRANDR 1
-#cmakedefine SDL_VIDEO_DRIVER_X11_DYNAMIC_XRENDER 1
+#cmakedefine SDL_VIDEO_DRIVER_X11_DYNAMIC "@SDL_VIDEO_DRIVER_X11_DYNAMIC@"
+#cmakedefine SDL_VIDEO_DRIVER_X11_DYNAMIC_XEXT "@SDL_VIDEO_DRIVER_X11_DYNAMIC_XEXT@"
+#cmakedefine SDL_VIDEO_DRIVER_X11_DYNAMIC_XRANDR "@SDL_VIDEO_DRIVER_X11_DYNAMIC_XRANDR@"
+#cmakedefine SDL_VIDEO_DRIVER_X11_DYNAMIC_XRENDER "@SDL_VIDEO_DRIVER_X11_DYNAMIC_XRENDER@"
 #cmakedefine SDL_VIDEO_DRIVER_X11_VIDMODE 1
 #cmakedefine SDL_VIDEO_DRIVER_X11_XINERAMA 1
 #cmakedefine SDL_VIDEO_DRIVER_X11_XME 1
@@ -303,7 +303,7 @@
 #cmakedefine SDL_VIDEO_OPENGL_GLX 1
 #cmakedefine SDL_VIDEO_OPENGL_WGL 1
 #cmakedefine SDL_VIDEO_OPENGL_OSMESA 1
-#cmakedefine SDL_VIDEO_OPENGL_OSMESA_DYNAMIC 1
+#cmakedefine SDL_VIDEO_OPENGL_OSMESA_DYNAMIC "@SDL_VIDEO_OPENGL_OSMESA_DYNAMIC@"
 
 /* Disable screensaver */
 #cmakedefine SDL_VIDEO_DISABLE_SCREENSAVER 1
