--- a/dependencies/libSDL/src/CMakeLists.txt
+++ b/dependencies/libSDL/src/CMakeLists.txt
@@ -203,9 +203,12 @@ if(NOT SDL_AUDIO_DISABLED)
 
 	elseif(UNIX AND NOT APPLE)
 		find_package(NASaudio)
-
-			set(SDL_AUDIO_DRIVER_NAS ON CACHE BOOL "Enable support for NAS audio driver")
-			set(SDL_AUDIO_DRIVER_NAS_DYNAMIC ON CACHE BOOL "Enable support for NAS audio dynamic driver")
+			if (NASaudio_LIBRARY)
+				set(SDL_AUDIO_DRIVER_NAS ON CACHE BOOL "Enable support for NAS audio driver")
+			else()
+				set(SDL_AUDIO_DRIVER_NAS OFF CACHE BOOL "Enable support for NAS audio driver")
+			endif()
+			set(SDL_AUDIO_DRIVER_NAS_DYNAMIC ${NASaudio_LIBRARY})
 
 			if(SDL_AUDIO_DRIVER_NAS)
 				if (${NASaudio_FOUND})
@@ -223,9 +226,12 @@ if(NOT SDL_AUDIO_DISABLED)
 	
 			endif()
 		find_package(artsc)
-
-			set(SDL_AUDIO_DRIVER_ARTS ON CACHE BOOL "Enable support for ARTS audio driver")
-			set(SDL_AUDIO_DRIVER_ARTS_DYNAMIC ON CACHE BOOL "Enable support for ARTS audio dynamic driver")
+			if (artsc_LIBRARY)
+				set(SDL_AUDIO_DRIVER_ARTS ON CACHE BOOL "Enable support for ARTS audio driver")
+			else()
+				set(SDL_AUDIO_DRIVER_ARTS OFF CACHE BOOL "Enable support for ARTS audio driver")
+			endif()
+			set(SDL_AUDIO_DRIVER_ARTS_DYNAMIC ${artsc_LIBRARY})
 
 			if(SDL_AUDIO_DRIVER_ARTS)
 				if (${artsc_FOUND})
@@ -244,8 +250,12 @@ if(NOT SDL_AUDIO_DISABLED)
 			endif()
 		find_package(pulseaudio)
 
-			set(SDL_AUDIO_DRIVER_PULSE ON CACHE BOOL "Enable support for PulseAudio audio driver")
-			set(SDL_AUDIO_DRIVER_PULSE_DYNAMIC ON CACHE BOOL "Enable support for PulseAudio audio dynamic driver")
+			if (pulseaudio_LIBRARY)
+				set(SDL_AUDIO_DRIVER_PULSE ON CACHE BOOL "Enable support for PulseAudio audio driver")
+			elseif()
+				set(SDL_AUDIO_DRIVER_PULSE OFF CACHE BOOL "Enable support for PulseAudio audio driver")
+			endif()
+			set(SDL_AUDIO_DRIVER_PULSE_DYNAMIC ${pulseaudio_LIBRARY})
 
 			if(SDL_AUDIO_DRIVER_PULSE)
 				if (${pulseaudio_FOUND})
@@ -278,9 +288,12 @@ if(NOT SDL_AUDIO_DISABLED)
 			)
 	
 		find_package(ALSA)
-
-			set(SDL_AUDIO_DRIVER_ALSA ON CACHE BOOL "Enable support for ALSA audio driver")
-			set(SDL_AUDIO_DRIVER_ALSA_DYNAMIC ON CACHE BOOL "Enable support for ALSA audio dynamic driver")
+			if (ALSA_LIBRARY)
+				set(SDL_AUDIO_DRIVER_ALSA ON CACHE BOOL "Enable support for ALSA audio driver")
+			elseif()
+				set(SDL_AUDIO_DRIVER_ALSA OFF CACHE BOOL "Enable support for ALSA audio driver")
+			endif()
+			set(SDL_AUDIO_DRIVER_ALSA_DYNAMIC ${ALSA_LIBRARY})
 
 			if(SDL_AUDIO_DRIVER_ALSA)
 				if (${ALSA_FOUND})
@@ -298,9 +311,12 @@ if(NOT SDL_AUDIO_DISABLED)
 	
 			endif()
 		find_package(ESD)
-
-			set(SDL_AUDIO_DRIVER_ESD ON CACHE BOOL "Enable support for Enlightement Sound Daemon audio driver")
-			set(SDL_AUDIO_DRIVER_ESD_DYNAMIC ON CACHE BOOL "Enable support for Enlightement Sound Daemon audio dynamic driver")
+			if (ESD_LIBRARY)
+				set(SDL_AUDIO_DRIVER_ESD ON CACHE BOOL "Enable support for Enlightement Sound Daemon audio driver")
+			else()
+				set(SDL_AUDIO_DRIVER_ESD OFF CACHE BOOL "Enable support for Enlightement Sound Daemon audio driver")
+			endif()
+			set(SDL_AUDIO_DRIVER_ESD_DYNAMIC ${ESD_LIBRARY})
 
 			if(SDL_AUDIO_DRIVER_ESD)
 				if (${ESD_FOUND})
@@ -564,8 +580,11 @@ if(NOT SDL_VIDEO_DISABLED)
 
 	elseif(UNIX AND NOT APPLE)
 		find_package(NanoX)
-
+		if (NANOX_LIBRARY)
 			set(SDL_VIDEO_DRIVER_NANOX ON CACHE BOOL "Enable support for NanoX video driver")
+		else()
+			set(SDL_VIDEO_DRIVER_NANOX OFF CACHE BOOL "Enable support for NanoX video driver")
+		endif()
 			if(SDL_VIDEO_DRIVER_NANOX)
 				if (${NanoX_FOUND})
 					list(APPEND SDL_VIDEO_SRC
@@ -592,15 +611,25 @@ if(NOT SDL_VIDEO_DISABLED)
 	
 			endif()
 		find_package(X11)
+			if (X11_X11_LIB)
+				set(SDL_VIDEO_DRIVER_X11 ON CACHE BOOL "Enable support for X11 video driver")
+				set(SDL_VIDEO_DRIVER_X11_DYNAMIC ${X11_X11_LIB})
+			else()
+				set(SDL_VIDEO_DRIVER_X11 OFF CACHE BOOL "Enable support for X11 video driver")
+			endif()
 
-			set(SDL_VIDEO_DRIVER_X11 ON CACHE BOOL "Enable support for X11 video driver")
-			set(SDL_VIDEO_DRIVER_X11_VIDMODE ON CACHE BOOL "Enable support for X11 vidmode video driver")
-			set(SDL_VIDEO_DRIVER_X11_XME ON CACHE BOOL "Enable support for X11 Xme video driver")
-			set(SDL_VIDEO_DRIVER_X11_DYNAMIC_XEXT ON CACHE BOOL "Enable support for X11 Xext video driver")
-			set(SDL_VIDEO_DRIVER_X11_DYNAMIC_XRANDR ON CACHE BOOL "Enable support for X11 Xrandr video driver")
-			set(SDL_VIDEO_DRIVER_X11_DYNAMIC_XRENDER ON CACHE BOOL "Enable support for X11 Xrender video driver")
-			set(SDL_VIDEO_DRIVER_X11_XINERAMA ON CACHE BOOL "Enable support for X11 Xinerama video driver")
-			set(SDL_VIDEO_DRIVER_X11_XV CACHE BOOL "Enable support for X11 Xv video driver")
+			#set(SDL_VIDEO_DRIVER_X11_VIDMODE ON CACHE BOOL "Enable support for X11 vidmode video driver")
+			#set(SDL_VIDEO_DRIVER_X11_XME ON CACHE BOOL "Enable support for X11 Xme video driver")
+
+			set(SDL_VIDEO_DRIVER_X11_DYNAMIC_XEXT ${X11_Xext_LIB})
+			set(SDL_VIDEO_DRIVER_X11_DYNAMIC_XRANDR ${X11_Xrandr_LIB})
+			set(SDL_VIDEO_DRIVER_X11_DYNAMIC_XRENDER ${X11_Xrender_LIB})
+			if (X11_Xinerama_LIB)
+				set(SDL_VIDEO_DRIVER_X11_XINERAMA 1)
+			endif()
+			if (X11_Xv_LIB)
+				set(SDL_VIDEO_DRIVER_X11_XV 1)
+			endif()
 
 			if(SDL_VIDEO_DRIVER_X11)
 				if (${X11_FOUND})
@@ -665,8 +694,11 @@ if(NOT SDL_VIDEO_DISABLED)
 
 
 		find_package(FBcon)
-
-			set(SDL_VIDEO_DRIVER_FBCON ON CACHE BOOL "Enable support for FrameBuffer Console video driver")
+			if (FBCON_LIBRARY)
+				set(SDL_VIDEO_DRIVER_FBCON ON CACHE BOOL "Enable support for FrameBuffer Console video driver")
+			else()
+				set(SDL_VIDEO_DRIVER_FBCON OFF CACHE BOOL "Enable support for FrameBuffer Console video driver")
+			endif()
 			if(SDL_VIDEO_DRIVER_FBCON)
 				if (${FBcon_FOUND})
 					list(APPEND SDL_VIDEO_SRC
@@ -702,8 +734,12 @@ if(NOT SDL_VIDEO_DISABLED)
 	
 			endif()
 		find_package(SVGAlib)
+			if (SVGALIB_LIBRARY)
+				set(SDL_VIDEO_DRIVER_SVGA ON CACHE BOOL "Enable support for SVGAlib video driver")
+			else()
+				set(SDL_VIDEO_DRIVER_SVGA OFF CACHE BOOL "Enable support for SVGAlib video driver")
+			endif()
 
-			set(SDL_VIDEO_DRIVER_SVGA ON CACHE BOOL "Enable support for SVGAlib video driver")
 			if(SDL_VIDEO_DRIVER_SVGA)
 				if (${SVGAlib_FOUND})
 					list(APPEND SDL_VIDEO_SRC
@@ -724,8 +760,12 @@ if(NOT SDL_VIDEO_DISABLED)
 	
 			endif()
 		find_package(DirectFB)
+			if (DIRECTFB_LIBRARY)
+				set(SDL_VIDEO_DRIVER_DIRECTFB ON CACHE BOOL "Enable support for DirectFB video driver")
+			else()
+				set(SDL_VIDEO_DRIVER_DIRECTFB OFF CACHE BOOL "Enable support for DirectFB video driver")
+			endif()
 
-			set(SDL_VIDEO_DRIVER_DIRECTFB ON CACHE BOOL "Enable support for DirectFB video driver")
 			if(SDL_VIDEO_DRIVER_DIRECTFB)
 				if (${DirectFB_FOUND})
 					list(APPEND SDL_VIDEO_SRC
