--- a/dependencies/sdl_mixer/external/flac-1.2.1/CMakeLists.txt
+++ b/dependencies/sdl_mixer/external/flac-1.2.1/CMakeLists.txt
@@ -65,7 +65,7 @@ if (FLAC_USE_ASSEMBLY)
 	ELSEIF(${CMAKE_SYSTEM_NAME} MATCHES "Solaris")
 		add_definitions(-DFLAC__NO_ASM -DFLAC__ALIGN_MALLOC_DATA)
 	ELSE()
-		if ((${CMAKE_SYSTEM_PROCESSOR} MATCHES "x86_64|x86"))
+		if ((${CMAKE_SYSTEM_PROCESSOR} MATCHES "x86_64|x86|AMD64"))
 			add_definitions(-DFLAC__CPU_IA32 -DFLAC__USE_3DNOW -DFLAC__HAS_NASM -DFLAC__ALIGN_MALLOC_DATA)
 			set(FLAC_SRC_LIBFLAC_NASM
 				src/libFLAC/ia32/bitreader_asm.nasm
