Updated Lua 5.1 include dir for Arch Linux

--- a/dependencies/sdl_image/CMakeLists.txt
+++ b/dependencies/sdl_image/CMakeLists.txt
@@ -57,7 +57,7 @@ if(SDLIMAGE_SUPPORT_JPEG)
 	add_subdirectory(external/jpeg-9)
 	include_directories(external/jpeg-9)
 	add_definitions(-DLOAD_JPG)
-	add_definitions(-DLOAD_JPG_DYNAMIC="libjpeg-9.dll")
+	add_definitions(-DLOAD_JPG_DYNAMIC="$<TARGET_FILE_NAME:JPEG>")
 endif()
 
 if(SDLIMAGE_SUPPORT_PNG)
@@ -65,7 +65,7 @@ if(SDLIMAGE_SUPPORT_PNG)
 	add_subdirectory(external/libpng-1.6.2)
 	include_directories(external/libpng-1.6.2)
 	add_definitions(-DLOAD_PNG)
-	add_definitions(-DLOAD_PNG_DYNAMIC="libpng16.dll")
+	add_definitions(-DLOAD_PNG_DYNAMIC="$<TARGET_FILE_NAME:${PNG_LIB_TARGETS}>")
 	add_definitions(-DPNG_USE_DLL)
 	add_definitions(-DZLIB_DLL)
 
@@ -89,14 +89,14 @@ if(SDLIMAGE_SUPPORT_TIFF)
 	include_directories("${CMAKE_BINARY_DIR}/external/tiff-4.0.3/libtiff")
 	include_directories("${CMAKE_CURRENT_BINARY_DIR}/external/tiff-4.0.3/libtiff")
 	add_definitions(-DLOAD_TIF)
-	add_definitions(-DLOAD_TIF_DYNAMIC="libtiff-5.dll")
+	add_definitions(-DLOAD_TIF_DYNAMIC="$<TARGET_FILE_NAME:TIFF>")
 endif()
 
 if(SDLIMAGE_SUPPORT_WEBP)
 	add_subdirectory(external/libwebp-0.3.0)
 	include_directories(external/libwebp-0.3.0/src)
 	add_definitions(-DLOAD_WEBP)
-	add_definitions(-DLOAD_WEBP_DYNAMIC="libwebp-4.dll")
+	add_definitions(-DLOAD_WEBP_DYNAMIC="$<TARGET_FILE_NAME:WEBP>")
 endif()
 
 set(SDLIMAGE_SRC
