--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -89,7 +89,11 @@ list(APPEND luasdl_libraries TOLUAPP)
 # Include Lua 5.1
 
 include(FindLua51)
-include_directories(${LUA_INCLUDE_DIR})
+include_directories(
+	${LUA_INCLUDE_DIR}
+	${LUA_INCLUDE_DIR}/lua5.1
+)
+
 include_directories(dependencies/lua/include)
 
 add_subdirectory(src)
