--- a/dependencies/sdl_image/CMakeLists.txt
+++ b/dependencies/sdl_image/CMakeLists.txt
@@ -128,6 +128,8 @@ add_library(SDLIMAGE SHARED
 	${SDLIMAGE_SOURCES}
 )
 
+add_dependencies(SDLIMAGE SDL)
+
 set_target_properties(SDLIMAGE
     PROPERTIES
     ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib"
