Updated library output directory for libfreetype

--- a/dependencies/sdl_ttf/CMakeLists.txt
+++ b/dependencies/sdl_ttf/CMakeLists.txt
@@ -23,6 +23,8 @@ list(APPEND SDLTTF_LIBRARIES freetype)
 set_target_properties(freetype
     PROPERTIES
     RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin"
+    ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib"
+    LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib"
 )
 
 set(SDLTTF_SRC
