Fixed X11 module path

--- a/dependencies/libSDL/src/CMakeLists.txt
+++ b/dependencies/libSDL/src/CMakeLists.txt
@@ -614,7 +614,7 @@ if(NOT SDL_VIDEO_DISABLED)
 		find_package(X11)
 			if (X11_X11_LIB)
 				set(SDL_VIDEO_DRIVER_X11 ON CACHE BOOL "Enable support for X11 video driver")
-				get_filename_component(SDL_VIDEO_DRIVER_X11_DYNAMIC ${X11_X11_LIB} NAME_WE CACHE)
+				get_filename_component(SDL_VIDEO_DRIVER_X11_DYNAMIC ${X11_X11_LIB} NAME CACHE)
 			else()
 				set(SDL_VIDEO_DRIVER_X11 OFF CACHE BOOL "Enable support for X11 video driver")
 			endif()
@@ -622,9 +622,9 @@ if(NOT SDL_VIDEO_DISABLED)
 			#set(SDL_VIDEO_DRIVER_X11_VIDMODE ON CACHE BOOL "Enable support for X11 vidmode video driver")
 			#set(SDL_VIDEO_DRIVER_X11_XME ON CACHE BOOL "Enable support for X11 Xme video driver")
 
-			get_filename_component(SDL_VIDEO_DRIVER_X11_DYNAMIC_XEXT ${X11_Xext_LIB} NAME_WE CACHE)
-			get_filename_component(SDL_VIDEO_DRIVER_X11_DYNAMIC_XRANDR ${X11_Xrandr_LIB} NAME_WE CACHE)
-			get_filename_component(SDL_VIDEO_DRIVER_X11_DYNAMIC_XRENDER ${X11_Xrender_LIB} NAME_WE CACHE)
+			get_filename_component(SDL_VIDEO_DRIVER_X11_DYNAMIC_XEXT ${X11_Xext_LIB} NAME CACHE)
+			get_filename_component(SDL_VIDEO_DRIVER_X11_DYNAMIC_XRANDR ${X11_Xrandr_LIB} NAME CACHE)
+			get_filename_component(SDL_VIDEO_DRIVER_X11_DYNAMIC_XRENDER ${X11_Xrender_LIB} NAME CACHE)
 
 			if (X11_Xinerama_LIB)
 				set(SDL_VIDEO_DRIVER_X11_XINERAMA 1)
